fix: make console_box visible on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -14,4 +14,5 @@ body {
   height: 100vh;
   color: var(--fg-dark);
   font-family: var(--ff-mono_fira);
+  overflow: hidden;
 }
